# django-select-related-prefetch-related-examples

./: Readme.md  pyproject.toml  requirements.txt
.github/workflows/: django_workflows.yaml
backend/: utils.py
backend/address/: admin.py  models.py
backend/address/api/: serializers.py
backend/address/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/fixtures/yaml/: country.yaml  product.yaml  user.yaml
backend/product/: admin.py  models.py
backend/product/api/: serializers.py  urls.py  views.py
backend/product/migrations/: 0001_initial.py  0002_alter_product_code.py  0003_product_created_at_product_updated_at.py  0004_product_is_active.py
